<resources>
    <string name="app_name">MyTest</string>
    <string name="email_label">Your Email address:</string>
    <string name="save">Save</string>
    <string name="email_hint">Enter your Email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="valid_email">OK</string>
    <string name="password_label">Your password:</string>
    <string name="password_hint">Enter your password</string>
    <string name="repeat_password_hint">Repeat your password</string>
    <string name="passwords_match">Passwords match!</string>
    <string name="passwords_error">Passwords do not match!</string>
</resources>